补提交修改个人信息

--- a/cn.xsdzq.platfrom/src/main/webapp/static/index.html
+++ b/cn.xsdzq.platfrom/src/main/webapp/static/index.html
@@ -71,8 +71,12 @@
 							<li class="hide"><a href="#"><i class="fa fa-eye"></i>
 									Privacy Settings</a></li>
 							<li>
-								<a href="/platform/logout"><i class="fa fa-power-off"></i>退出</a>
+								<a href="/platform/static/index.html#/getMyInfo"><i class="fa fa-pencil-square-o"></i>&nbsp;修改信息 </a>
 							</li>
+							<li>
+								<a href="/platform/logout"><i class="fa fa-power-off"></i>&nbsp;退出</a>
+							</li>
+							
 						</ul>
 					</li>
 					<!-- END USER LOGIN DROPDOWN -->
